add contact page and Features

--- a/src/about-us.html
+++ b/src/about-us.html
@@ -188,11 +188,11 @@
         </div>
         <div class="col-lg-9">
           <ul class="menu">
-            <li><a href="about-us.html">About us</a></li>
-            <li><a href="#">Features</a></li>
+            <li><a class="current" href="about-us.html">About us</a></li>
+            <li><a href="features.html">Features</a></li>
             <li><a href="#">Roadmap</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html#pricing">Pricing</a></li>
+            <li><a href="contact-us.html">Contact</a></li>
             <li class="menu-button-group">
               <a class="primary-button primary-button-dark" href="#">Sign up for free</a>
               <a class="primary-button" href="#">Login</a>
@@ -284,7 +284,7 @@
                 </div>
                 <div class="col-lg-4">
                   <p>He has successfully built 7-figure eCommerce brand with his partner in the toys & kids product niche and acquired by a US based private equity firm.</p>
-                  <p>  He has also co-founded an eCommerce education academy which has coached close to 3000 students to start their private label brands</p>
+                  <p>He has also co-founded an eCommerce education academy which has coached close to 3000 students to start their private label brands</p>
                 </div>
               </div>
             </div>
@@ -643,9 +643,9 @@
               <div class="footer-item">
                 <h4>Services</h4>
                 <ul class="footer-list">
-                  <li><a href="#">Features</a></li>
+                  <li><a href="features.html">Features</a></li>
                   <li><a href="#">Roadmap</a></li>
-                  <li><a href="#">Pricing</a></li>                  
+                  <li><a href="index.html#pricing">Pricing</a></li>                  
                 </ul>
               </div>
             </div>
@@ -654,7 +654,7 @@
                 <h4>Support</h4>
                 <ul class="footer-list">
                   <li><a href="#">Support</a></li>
-                  <li><a href="#">Contact us</a></li>
+                  <li><a href="contact-us.html">Contact us</a></li>
                   <li><a href="#">FAQ</a></li>                  
                 </ul>
               </div>
@@ -663,7 +663,7 @@
               <div class="footer-item">
                 <h4>About</h4>
                 <ul class="footer-list">
-                  <li><a href="#">About us</a></li>
+                  <li><a href="about-us.html">About us</a></li>
                   <li><a href="#">Privacy policy</a></li>
                 </ul>
               </div>
